// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders background task error correctly 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed"
    id="component_navigation.status.failed"
    values={
      Object {
        "branch": undefined,
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders background task error correctly for a different branch/PR 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_branch"
    id="component_navigation.status.failed_branch"
    values={
      Object {
        "branch": "my/branch",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders background task error correctly for a different branch/PR 2`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_branch"
    id="component_navigation.status.failed_branch"
    values={
      Object {
        "branch": "650 - feature/my_pr",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders background task in progress info correctly 1`] = `
<Alert
  display="banner"
  variant="info"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.in_progress"
    id="component_navigation.status.in_progress"
    values={
      Object {
        "branch": undefined,
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders background task license info correctly 1`] = `
<Connect(withAppState(ComponentNavLicenseNotif))
  currentTask={
    Object {
      "errorMessage": "Foo",
      "errorType": "LICENSING",
      "status": "FAILED",
    }
  }
/>
`;

exports[`renders background task pending info correctly 1`] = `
<Alert
  display="banner"
  variant="info"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.pending"
    id="component_navigation.status.pending"
    values={
      Object {
        "branch": undefined,
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders background task pending info correctly for admin 1`] = `
<Alert
  display="banner"
  variant="info"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.pending.admin"
    id="component_navigation.status.pending.admin"
    values={
      Object {
        "branch": undefined,
        "url": <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/background_tasks",
              "query": Object {
                "id": "foo",
                "status": "__ALL__",
              },
            }
          }
        >
          background_tasks.page
        </Link>,
      }
    }
  />
</Alert>
`;
